--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "dayjs": "^1.11.10",
     "next": "13.5.6",
+    "next-client-cookies": "^1.0.5",
     "react": "^18",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18",
